# rbkcrack

./: .travis.yml  Cargo.toml  LICENSE  README.md  README_CN.md  cli.yml  readme.md
src/: attack.rs  crc32_tab.rs  data.rs  file.rs  keys.rs  keystream_tab.rs  lib.rs  main.rs  mult_tab.rs  utils.rs  zreduction.rs
