[package]
name = "rbkcrack"
version = "0.2.1"
authors = ["Aloxaf <bailong104@gmail.com>"]
description = "Crack legacy zip encryption with Biham and Kocher's known plaintext attack."
documentation = "https://github.com/Aloxaf/rbkcrack"
repository = "https://github.com/Aloxaf/rbkcrack"
readme = "README.md"
keywords = ["zip", "crack"]
license = "zlib"
edition = "2018"

[dependencies]
chrono = "0.4.6"
env_logger = "0.5.13"
failure = "0.1.2"
lazy_static = "1.1.0"
flate2 = "1.0"
log = "0.4.5"
podio = "0.1.6"
rayon = "1.0.2"
structopt = "0.2"
zip = { git = " https://github.com/Aloxaf/zip-rs/", branch = "rbkcrack" }
